Can't apply the z-index all the time as it can prevent the Symphony menu from appearing over the field. Apply the z-index only when the autosuggest opens

--- a/assets/referencelink.publish.css
+++ b/assets/referencelink.publish.css
@@ -1,9 +1,6 @@
 .reflink_search {
-  /* Used by jQuery UI to calculate ui-autocomplete z-index. This tricks
-  jQuery.Position to use out z-index instead of returning 0. Needed to ensure
-  autocomplete list overrides other fields, Stage in particular. */
   position: relative;
-  z-index: 2000;
+  z-index: 2;
 }
 
 ul.ui-autocomplete {
